fix: remove sensitive data